Change website structure
- Moved assignment links to the navigation bar
- Home page now describes what the site contains and how to navigate it.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,7 +20,9 @@ website:
     logo: images/unbc_logo.png
     left:
       - text: "Lab Instructions"
-        href: index.qmd
+        menu: 
+          - text: "Introduction to R"
+            href: labs/lab01.qmd
 
       - text: "Lab Quizzes"
         menu:
